# qodo-quality-workshop-signalpay

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  skills-lock.json
.agents/skills/: README.md
.agents/skills/payment-idempotency/: SKILL.md
.claude/skills/workshop-failure-path-testing/: SKILL.md
.github/workflows/: verify.yml
.plan/: README.md
.plan/readme-qodo-config/: build-session-execution-plan.md  plan.md
.plan/templates/: build-session-execution-plan.md  high-level-plan.md
.plan/verify-warning-cleanup/: build-session-execution-plan.md  plan.md
.plan/workshop-education-docs/: build-session-execution-plan.md  plan.md
.plan/workshop-payment-task/: build-session-execution-plan.md  plan.md
docs/: 00-prerequisites.md  01-qodo-portal-github.md  02-qodo-api-key-and-skills.md  03-run-rules-before-coding.md  04-local-verification-gates.md  05-open-pr-and-qodo-review.md  06-pr-resolver-remediation.md  07-workshop-teaching-guide.md  troubleshooting.md
rules/: README.md  api-and-events.md  auth-and-sessions.md  payment-mutations.md  secrets-and-workshop-safety.md  testing-and-gates.md
scripts/: check_commit_msg.py  install-local-skills.sh  workshop-doctor.sh
skills/: README.md
skills/workshop-guidelines-audit/: SKILL.md
skills/workshop-plan-from-task/: SKILL.md
slides/: README.md
src/signalpay_api/: __init__.py  app.py  contracts.py
tests/: test_contracts.py  test_payments_api.py  test_refund_workshop_task.py  test_workshop_structure.py
(+2 files in other folders)
