[project]
name = "qodo-quality-workshop-signalpay"
version = "0.1.0"
description = "Self-contained SignalPay API workshop for quality-first AI coding with Qodo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pyright>=1.1.407",
    "ruff>=0.14.8",
    "semgrep>=1.145.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signalpay_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
